Added 'OAuth2', refactoring tests, added security in swagger.
